{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 810,
  "lineage": "c59847da-2cc3-5576-2519-94170b15d99e",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-vpc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:internet-gateway/igw-0f1d1c918963b2723",
            "id": "igw-0f1d1c918963b2723",
            "owner_id": "401413892014",
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053e1a802c8ee89d7",
            "owner_id": "401413892014",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1d1c918963b2723",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_internet_gateway.eks-vpc-igw",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-public-rt1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e17f166be8d7c70e",
            "route_table_id": "rtb-053e1a802c8ee89d7",
            "subnet_id": "subnet-0dab16fedbcd2139e"
          },
          "dependencies": [
            "module.eks-cluster.aws_route_table.eks-public-rt",
            "module.eks-cluster.aws_subnet.eks-public-1"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-public-rt1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df25194463cd8066",
            "route_table_id": "rtb-053e1a802c8ee89d7",
            "subnet_id": "subnet-0bcbd454fb7c2e82a"
          },
          "dependencies": [
            "module.eks-cluster.aws_route_table.eks-public-rt",
            "module.eks-cluster.aws_subnet.eks-public-2"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-public-rt1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0803714861f376f55",
            "route_table_id": "rtb-053e1a802c8ee89d7",
            "subnet_id": "subnet-00d7a6a53c72a46c0"
          },
          "dependencies": [
            "module.eks-cluster.aws_route_table.eks-public-rt",
            "module.eks-cluster.aws_subnet.eks-public-3"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:security-group/sg-03ee6b591c3d8b235",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ee6b591c3d8b235",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05c8a4cb3d29df12c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-group",
            "name_prefix": "",
            "owner_id": "401413892014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-group",
              "kubernetes.io/cluster/exchange-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-node-wrkgrp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:security-group/sg-05c8a4cb3d29df12c",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c8a4cb3d29df12c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=a15c9528189534923b25c708220e064a",
                "from_port": 31802,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31802
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=a15c9528189534923b25c708220e064a",
                "from_port": 31894,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31894
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "kubernetes.io/rule/nlb/health=a15c9528189534923b25c708220e064a",
                "from_port": 30844,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30844
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03ee6b591c3d8b235"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-node-wrkgrp",
            "name_prefix": "",
            "owner_id": "401413892014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-node-wrkgrp",
              "kubernetes.io/cluster/exchange-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-ingress-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 0,
            "id": "sgrule-2764853143",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03ee6b591c3d8b235",
            "self": false,
            "source_security_group_id": "sg-05c8a4cb3d29df12c",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.eks-cluster-group",
            "module.eks-cluster.aws_security_group.eks-node-wrkgrp",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 0,
            "id": "sgrule-1762093384",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05c8a4cb3d29df12c",
            "self": false,
            "source_security_group_id": "sg-03ee6b591c3d8b235",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.eks-cluster-group",
            "module.eks-cluster.aws_security_group.eks-node-wrkgrp",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-wrkgrp-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2762623963",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05c8a4cb3d29df12c",
            "self": false,
            "source_security_group_id": "sg-05c8a4cb3d29df12c",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.eks-node-wrkgrp",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:subnet/subnet-0dab16fedbcd2139e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.1.0/24",
            "id": "subnet-0dab16fedbcd2139e",
            "map_public_ip_on_launch": true,
            "owner_id": "401413892014",
            "tags": {
              "Name": "eks-public-1",
              "kubernetes.io/cluster/exchange-dev": "shared"
            },
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:subnet/subnet-0bcbd454fb7c2e82a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.2.0/24",
            "id": "subnet-0bcbd454fb7c2e82a",
            "map_public_ip_on_launch": true,
            "owner_id": "401413892014",
            "tags": {
              "Name": "eks-public-2",
              "kubernetes.io/cluster/exchange-dev": "shared"
            },
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:subnet/subnet-00d7a6a53c72a46c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.3.0/24",
            "id": "subnet-00d7a6a53c72a46c0",
            "map_public_ip_on_launch": true,
            "owner_id": "401413892014",
            "tags": {
              "Name": "eks-public-3",
              "kubernetes.io/cluster/exchange-dev": "shared"
            },
            "vpc_id": "vpc-024ddaf33064513e7"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401413892014:vpc/vpc-024ddaf33064513e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-04b89dd5c14e088e0",
            "default_route_table_id": "rtb-0b3ad95fbf1254eb1",
            "default_security_group_id": "sg-0cf22085f8d5b1f69",
            "dhcp_options_id": "dopt-5417a02e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-024ddaf33064513e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b3ad95fbf1254eb1",
            "owner_id": "401413892014",
            "tags": {
              "Name": "exchange-dev",
              "kubernetes.io/cluster/exchange-dev": "shared"
            }
          }
        }
      ]
    }
  ]
}